# luum-cognitive-os

./: .claudeignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  SKILL-AUTO-OPTIMIZATION.md  THIRD_PARTY_LICENSES.txt  TRANSPARENCY.md  cognitive-os.yaml  docker-compose.cognitive-os.yml  env.example  go.mod  install.sh  opencode.json  package.json  public-metrics-aspirational.json  public-metrics-dogfood.json  pyproject.toml  pytest.ini  requirements.txt  run  sbom.json  yaml.py
.ai/: context.json
.claude/: launch.json  settings.json  settings.json.bak
.codex/: fast-paths.md  hooks.json  project-index.md
.cognitive-os/: content-policy.yaml  test-lanes.yaml  test-resource-policy.yaml
.devin/: hooks.json
.githooks/: commit-msg  post-commit  post-merge  post-rewrite  pre-commit  pre-push  prepare-commit-msg
.github/: pull_request_template.md
.opencode/: cos-hooks.json
.promptfoo/: config.yaml
Formula/: cognitive-os.rb
agents/: stack-validator.md  test-coverage-enforcer.md
customizations/: example.yaml  sdd-verify-domains.yaml
dashboard/: ARCHIVED.md  Dockerfile  package-lock.json  package.json
docs/: AGENTS.md  HOW-TO-USE-COS.md  INDEX.md  README.md  RED-TEAM-CHANGELOG.md  RED-TEAM-COVERAGE.md  SESSION-ADR-CLOSURE-2026-05-04.md  SESSION-HANDOFF-2026-04-17.md  SESSION-HANDOFF-2026-04-25.md  SESSION-HANDOFF-2026-04-27.md  SESSION-HANDOFF-2026-05-01.md  SESSION-HANDOFF-2026-05-02.md  SESSION-HANDOFF-2026-05-04.md  SESSION-HANDOFF-2026-05-05-headless-service-runtime.md  acc  adoption-tiers.md  adrs  adw-patterns.md  agent-capability-coverage.md  agent-efficiency-strategy.md  agent-quality.md  agent-teams-testing.md  agent-teams.md  anti-hallucination.md  architecture-principles.md  architecture.md  assets  auto-library.md  auto-repair-system.md  automation-doc-sync.md  automation.md  benchmark-results.md  benchmarking.md  benchmarks  blocked-tools.md  bmad-v6-patterns.md  business  capabilities  capability-snapshot.md  case-studies  (+104 more)
hooks/: adaptive-bypass.sh  adoption-freeze-gate.sh  adr-detector.sh  adr-relevance-suggest.sh  adr-section-validator.sh  adversarial-review-gate.sh  agent-bash-cwd-enforcer.sh  agent-bus-monitor.sh  agent-checkpoint.sh  agent-control-inbound-guard.sh  agent-launch-confirmed.sh  agent-message-inbox-context.sh  agent-message-inbox-guard.sh  agent-output-verifier.sh  agent-prelaunch.sh  agent-quota-advisor.sh  agent-quota-redirect.sh  agent-qwen-bridge.sh  agent-work-tracker.sh  agent-working-dir-inject.sh  aguara-scan.sh  ai-provider-identity-guard.sh  architecture-compliance.sh  aspirational-audit-weekly.sh  assumption-tracker.sh  attribution-completeness-validator.sh  audit-id-enricher.sh  auto-checkpoint.sh  auto-refine.sh  auto-repair-dispatcher.sh  auto-rollback-trigger.sh  auto-skill-generator.sh  auto-verify.sh  background-agent-reminder.sh  bash-hot-path-dispatcher.sh  blast-radius.sh  branch-ownership-lock.sh  branch-ownership-release.sh  claim-validator.sh  clarification-gate.sh  (+208 more)
lib/: __init__.py  adaptive_profile.py  adr_detector.py  adr_router.py  adversarial_rubric.py  agent_bus.py  agent_bus_metrics.py  agent_control_policy.py  agent_dashboard.py  agent_health_monitor.py  agent_input_validator.py  agent_lifecycle.py  agent_message_bus.py  agent_output_extractor.py  agent_output_monitor.py  agent_permissions.py  agent_redirect_protocol.py  agent_reflection.py  agent_runner.py  agent_spawn_benchmark.py  agent_team.py  agent_team_transport.py  ai_provider_identity_guard.py  anchored_summary.py  anthropic_direct_policy.py  audit_id.py  auto_executor.py  auto_repair.py  batch_runner.py  bifrost_client.py  branch_lock.py  branch_task_policy.py  budget_calculator.py  capability_ceiling.py  capability_levels.py  changelog_generator.py  checkpoint_manager.py  circuit_breaker.py  claude_executor.py  code_reviewer.py  (+278 more)
manifests/: adr-closure-metadata.yaml  adr-implementation-runtime-allowlist.yaml  adr-routing-coverage.yaml  agent-orchestration-adapters.yaml  agent-training-harness.yaml  agentic-primitive-registry.lock.yaml  ai-agent-harness-landscape.yaml  ai-provider-identity-policy.yaml  branch-per-task.yaml  bwrap-seccomp-strict.json  capability-coverage.yaml  control-plane-audits.yaml  cos-instance-implementation-phases.yaml  cos-instance-profiles.yaml  credential-safe-scripts.yaml  cross-stack-adoption-truth.yaml  cross-stack-license-audit.yaml  deferred-tool-loading.yaml  dependencies.yaml  dependency-adoption-evidence.yaml  documentation-truth-claims.yaml  event-sourced-session-bus.yaml  exercised-coverage-baseline.yaml  external-adoption-evidence.yaml  external-review-scenarios.yaml  external-tool-adoption-freeze.yaml  external-tool-licenses.yaml  external-tools-adoption.yaml  feature-tool-due-diligence.yaml  federation-triggers.yaml  fleet-confidence-schema.yaml  flow-contract-schema.yaml  handoff-protocol.yaml  harness-driver-capabilities.yaml  harness-implementation-phases.yaml  harness-projection-registry.json  harness-projection.yaml  history-rewrite-ledger.yaml  history-sanitization.yaml  hook-quality.yaml  (+76 more)
mcp-server/: README.md  cos_mcp.py
plans/: README.md
policies/: destructive-bash.yaml  destructive-git.yaml  (+1 more)
workflows/: DEPRECATED.md  README.md  backend_bug_pipeline.py  backend_deploy_pipeline.py  backend_feature_pipeline.py  backend_migration_pipeline.py  backend_state.py  go_service_pipeline.py  pyproject.toml  run.py
workflows/config/: environments.yaml  services.yaml
workflows/lib/: agent.py  clickup.py  data_types.py  file_parser.py  git.py  shared_phases.py  telegram.py  utils.py
workflows/phases/: __init__.py  apply.py  deploy.py  evaluate.py  implement.py  migration_check.py  plan.py  security_check.py
workflows/state/: sprint-status.yaml
workflows/steps/example-new-endpoint/: step-01-create-entity.md  step-02-create-repository.md  step-03-create-usecase.md  step-04-create-controller.md  step-05-write-tests.md  step-06-complete.md
(+6061 files in other folders)
