[project]
name = "luum-cognitive-os"
version = "0.12.0"
description = "Luum Cognitive OS — agent orchestration, memory, and tooling"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=14",  # rich 15 blocked by cognee[memory] pin (research: docs/reports/python-major-bumps-2026-04-24.md)
]

[project.optional-dependencies]
llm = [
    "litellm>=1.0",
    # redis client speaks the Valkey wire protocol; Valkey (fork of Redis 7.2.4)
    # is the server running in OrbStack (see rules/orchestrator-mode.md).
    # The `valkey` Python package was redundant — code uses `import redis`.
    "redis>=5.0.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
observability = [
    # ADR-060 (2026-04-24): cloud-only observability backend removed — see
    # ADR-060 for the local-only policy. Phoenix is the single surface.
    # ADR-058 (2026-04-24): Phoenix is the LLM-native trace UI (former backend retired).
    # arize-phoenix: full UI server (run via `uv run phoenix serve`).
    # arize-phoenix-otel: OTel exporter used by lib/record_completion.py.
    "arize-phoenix>=4.0",
    "arize-phoenix-otel>=0.6",
    # mlflow-skinny: lightweight mlflow without pyarrow/pandas (which fail on Python 3.14).
    # Use mlflow-skinny for agent-metrics mirror; full mlflow requires pyarrow to build.
    "mlflow-skinny>=2.0",
]
memory = [
    "cognee>=0.1",
]
guardrails = [
    "nemoguardrails",
]
jupyter = [
    "jupyter",
    "notebook",
]
crawling = [
    "crawl4ai>=0.8.0",
]
# ADR-029b Phase B-β (ADR-039) — reinvention-gate semantic embeddings.
# Optional: adds ~90MB model + PyTorch CPU wheel (~200MB). Hook falls back
# to Jaccard (Phase B-α) when this extra is not installed.
# Install with: uv sync --extra semantic
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
# ADR-049 — direct-SDK LLM dispatch (no LiteLLM/Bifrost proxy).
# The `openai` SDK covers Alibaba Qwen, DeepSeek, OpenRouter, MiniMax, GLM,
# and OpenAI itself via base_url overrides. Used by lib/qwen_provider.py
# and (future) sibling providers.
# Install with: uv sync --extra direct_providers
direct_providers = [
    "openai>=1.50",
]
# ADR-062 Phase 3 / ADR-063 — Official Claude Agent SDK (Python, MIT license).
# Opt-in: only needed when ANTHROPIC_API_KEY is set and claude_sdk provider is used.
# Required: Python ≥ 3.10, live ANTHROPIC_API_KEY (pay-per-token).
# Install with: uv sync --extra claude-sdk
claude-sdk = [
    "claude-agent-sdk>=0.1",
]
testing = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",
    # pytest-rerunfailures (ADR-100): retry transient flakes once before
    # marking a test as failed. Used by cos-test cluster/broad through the
    # wrapper so resource-pressure flakes don't cascade into red CI.
    "pytest-rerunfailures>=15.0",
    "mutmut>=3.0",
    "pytest-smell>=1.0",
    # testcontainers: used for ephemeral Valkey in @pytest.mark.integration tests.
    # RedisContainer("valkey/valkey:7.2.4") provides an isolated Valkey instance
    # so integration tests don't depend on OrbStack being up.
    # NOTE: The orchestrator Valkey-bridge test (heartbeat → MetricEvent JSONL) was
    # evaluated but not implemented with testcontainers: it would require spawning a
    # real sub-Claude to produce heartbeats, which is expensive and out of scope.
    # testcontainers is included so future integration tests (e.g. agent_bus pub/sub)
    # can use it without a pyproject.toml change.
    "testcontainers[redis]>=4.0",
]
security = [
    # semgrep: install via `brew install semgrep` or `pip install semgrep`
    # garak: install via `pip install garak` (heavy dep, not locked here)
]
enforcement = [
    "pre-commit>=4.0",
    "ruff>=0.9.0",
    "vulture>=2.14",
    "import-linter>=2.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
]
dev = [
    # Note: `semantic` extra is OPTIONAL and NOT in `dev` on purpose — Phase B-β
    # embeddings pull in PyTorch (~200MB) which bloats CI. Opt in explicitly with
    # `pip install '.[semantic]'`.
    # Note: `memory` extra (cognee/kuzu) is OPTIONAL and NOT in `dev` on purpose — kuzu
    # fails to build on Python 3.14, blocking normal dev workflow. Opt in explicitly with
    # `uv sync --extra memory`.
    "luum-cognitive-os[llm,web,observability,guardrails,jupyter,crawling,testing,enforcement]",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F401", "F841", "E711", "E712"]

[tool.vulture]
min_confidence = 80
paths = ["lib/"]

[tool.mutmut]
paths_to_mutate = ["lib/"]
test_command = "python -m pytest tests/unit/test_rate_limiter.py -x -q --no-header -p no:timeout"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
