[project]
name = "luum-cognitive-os"
version = "0.26.0"
description = "Luum Cognitive OS — agent orchestration, memory, and tooling"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=15",  # core lane can advance independently from memory/cognee lane (ADR-145)
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
# ADR-049 — direct-SDK LLM dispatch (no LiteLLM/Bifrost proxy).
# The `openai` SDK covers Alibaba Qwen, DeepSeek, OpenRouter, MiniMax, GLM,
# and OpenAI itself via base_url overrides. Used by lib/qwen_provider.py
# and sibling providers.
# Install with: uv sync --extra direct_providers
# This remains in the core lock because it is a lightweight runtime adapter.
direct_providers = [
    "openai>=1.50",
]
# ADR-062 Phase 3 / ADR-063 — Official Claude Agent SDK (Python, MIT license).
# Opt-in: only needed when ANTHROPIC_API_KEY is set and claude_sdk provider is used.
# Required: Python ≥ 3.10, live ANTHROPIC_API_KEY (pay-per-token).
# Install with: uv sync --extra claude-sdk
claude-sdk = [
    "claude-agent-sdk>=0.1",
]
testing = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",
    # pytest-rerunfailures (ADR-100): retry transient flakes once before
    # marking a test as failed. Used by cos-test cluster/broad through the
    # wrapper so resource-pressure flakes don't cascade into red CI.
    "pytest-rerunfailures>=15.0",
    "mutmut>=3.0",
    "pytest-smell>=1.0",
    # testcontainers: used for ephemeral Valkey in @pytest.mark.integration tests.
    # RedisContainer("valkey/valkey:7.2.4") provides an isolated Valkey instance
    # so integration tests don't depend on OrbStack being up.
    "testcontainers[redis]>=4.0",
]
security = [
    # semgrep: install via `brew install semgrep` or `pip install semgrep`
    # garak: install via `pip install garak` (heavy dep, not locked here)
]
enforcement = [
    "pre-commit>=4.0",
    "ruff>=0.9.0",
    "vulture>=2.14",
    "import-linter>=2.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
]
dev = [
    # Dependency lane split: dev stays lightweight and first-party focused.
    # Heavy optional lanes live under requirements/dependency-lanes/ so their
    # upstream pins cannot block core dependency hygiene.
    "luum-cognitive-os[web,direct_providers,testing,enforcement]",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F401", "F841", "E711", "E712"]

[tool.vulture]
min_confidence = 80
paths = ["lib/"]

[tool.mutmut]
paths_to_mutate = ["lib/"]
test_command = "python -m pytest tests/unit/test_rate_limiter.py -x -q --no-header -p no:timeout"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
