[project]
name = "luum-cognitive-os"
version = "0.29.22"
description = "Luum Cognitive OS — agent orchestration, memory, and tooling"
# Note: FSL-1.1-MIT is source-available, not OSI-approved. Converts to MIT after 2 years.
license = { text = "FSL-1.1-MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    # rich pinned to >=14.3.1,<15 until browser-use (ADR-288) relaxes its
    # `rich==14.3.1` exact pin. Bump back to `>=15` once browser-use ships
    # compat with rich 15 (currently 0.12.6 is the latest available on PyPI
    # and still hard-pins to 14.3.1). Tracked: drop the ceiling when CI
    # validates browser-use against rich>=15 successfully.
    "rich>=14.3.1,<15",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
# ADR-049 — direct-SDK LLM dispatch (no LiteLLM/Bifrost proxy).
# The `openai` SDK covers Alibaba Qwen, DeepSeek, OpenRouter, MiniMax, GLM,
# and OpenAI itself via base_url overrides. Used by lib/qwen_provider.py
# and sibling providers.
# Install with: uv sync --extra direct_providers
# This remains in the core lock because it is a lightweight runtime adapter.
direct_providers = [
    "openai>=1.50",
]
# ADR-062 Phase 3 / ADR-063 — Official Claude Agent SDK (Python, MIT license).
# Opt-in: only needed when ANTHROPIC_API_KEY is set and claude_sdk provider is used.
# Required: Python ≥ 3.10, live ANTHROPIC_API_KEY (pay-per-token).
# Install with: uv sync --extra claude-sdk
claude-sdk = [
    "claude-agent-sdk>=0.1",
]
# ADR-288 — Web automation via the MIT-licensed browser-use project.
# Opt-in: only needed when callers invoke `/browser-task` or otherwise route
# through `lib.web_automation_router.route()`. Kill switch:
# COS_DISABLE_WEB_AUTOMATION=1.
# Install with: uv sync --extra web-automation
web-automation = [
    "browser-use>=0.12.6,<0.13",
]
# ADR-296 — Language-agnostic semantic skill routing.
# Multilingual ONNX embedding model (~220MB) via fastembed; consumed by
# lib/semantic_skill_matcher.py. CPU-only, no torch. Opt-in: required only
# when the regex skill router needs cross-language fallback. Kill switch:
# COS_DISABLE_SEMANTIC_ROUTING=1.
# Install with: uv sync --extra semantic-routing
# Note on aurelio-labs/semantic-router: the live PyPI release line is stuck
# at 0.0.3 (no Route/RouteLayer symbols exported); the 0.1.x line referenced
# upstream has not been published. We therefore consume fastembed directly.
semantic-routing = [
    "fastembed>=0.6,<0.9",
]
# English-only content audit (v2) — lingua + tree-sitter language detection.
# Install with: uv sync --extra audit
audit = [
    "lingua-language-detector>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-bash",
]
testing = [
    # Unit broad includes English-only audit tests; keep audit deps in testing
    # so `uv sync --extra testing` is an authoritative broad-test environment.
    "lingua-language-detector>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
    "tree-sitter-go",
    "tree-sitter-bash",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",
    # pytest-rerunfailures (ADR-100): retry transient flakes once before
    # marking a test as failed. Used by cos-test cluster/broad through the
    # wrapper so resource-pressure flakes don't cascade into red CI.
    "pytest-rerunfailures>=15.0",
    "mutmut>=3.0",
    # testcontainers: used for ephemeral Valkey in @pytest.mark.integration tests.
    # RedisContainer("valkey/valkey:7.2.4") provides an isolated Valkey instance
    # so integration tests don't depend on OrbStack being up.
    "testcontainers[redis]>=4.0",
]
security = [
    # semgrep: install via `brew install semgrep` or `pip install semgrep`
    # garak: install via `pip install garak` (heavy dep, not locked here)
]
enforcement = [
    "pre-commit>=4.0",
    "ruff>=0.9.0",
    "vulture>=2.14",
    "import-linter>=2.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
]
# Pyrefly pilot lane (ADR/radar 2026-05-15): fast Python type checking for
# agentic loops. Kept outside dev/default so the SO can measure signal before
# promoting it to a blocking gate. Run with: make typecheck-pyrefly
typecheck = [
    "pyrefly>=1.0,<1.1",
]
dev = [
    # Dependency lane split: dev stays lightweight and first-party focused.
    # Heavy optional lanes live under requirements/dependency-lanes/ so their
    # upstream pins cannot block core dependency hygiene.
    "luum-cognitive-os[web,direct_providers,testing,enforcement]",
]


[tool.pyrefly]
# Pilot scope: first-party Python runtime and scripts only. Tests remain covered
# by pytest lanes; optional heavy integrations stay import-lazy and are measured
# separately before this lane becomes blocking.
project-includes = [
    "lib/**/*.py",
    "scripts/**/*.py",
    "packages/agent-service/src/**/*.py",
]
project-excludes = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv",
    "**/node_modules",
    "docs/**",
    "dist/**",
]
search-path = [".", "lib", "scripts", "packages/agent-service/src"]
python-version = "3.11"

[tool.pyrefly.errors]
# Missing imports are noisy in this repo because many integrations are opt-in
# extras. Keep API/type-shape diagnostics on by default; run strict-import
# probes manually before promotion to blocking CI.
missing-import = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F401", "F841", "E711", "E712"]

[tool.vulture]
min_confidence = 80
paths = ["lib/"]

[tool.mutmut]
paths_to_mutate = ["lib/"]
test_command = "python -m pytest tests/unit/test_rate_limiter.py -x -q --no-header -p no:timeout"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
