[project]
name = "cognitive-os-workflows"
version = "0.1.0"
description = "AI-powered workflow orchestration for backend services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
cognitive-os-workflow = "run:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
